--- a/src/style/style.css
+++ b/src/style/style.css
@@ -51,9 +51,7 @@
   
   .container {
     max-width: 1920px;
-    height: 100vh;
     margin: 0 auto;
-    position: relative;
     background-color: #181818;
   }
   
@@ -575,7 +573,7 @@
   }
   
   .bar {
-    position: absolute;
+    position: fixed;
     bottom: 0;
     left: 0;
     width: 100%;
