--- a/src/components/bar/Bar.module.css
+++ b/src/components/bar/Bar.module.css
@@ -61,3 +61,8 @@
         -ms-flex-direction: row;
             flex-direction: row;
   }
+
+  .color {
+    background-color: red;
+    height: 5px;
+  }
