--- a/src/components/barProgress/BarProgress.module.css
+++ b/src/components/barProgress/BarProgress.module.css
@@ -1,6 +1,6 @@
 .progress {
-    width: 100%;
-    height: 5px;
-    background: #2E2E2E;
-    cursor: pointer;
-  }
+  width: 100%;
+  height: 5px;
+  background: #2e2e2e;
+  cursor: pointer;
+}
