--- a/src/components/filter/Filter.module.css
+++ b/src/components/filter/Filter.module.css
@@ -1,87 +1,87 @@
 .filter {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    margin-bottom: 51px;
-  }
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -ms-flex-direction: row;
+  flex-direction: row;
+  -webkit-box-align: center;
+  -ms-flex-align: center;
+  align-items: center;
+  margin-bottom: 51px;
+}
 
-  .title {
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
-    margin-right: 15px;
-  }
+.title {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  margin-right: 15px;
+}
 
-  .button {
-    font-style: normal;
-    font-weight: 400;
-    font-size: 16px;
-    line-height: 24px;
-    border: 1px solid #FFFFFF;
-    border-radius: 60px;
-    padding: 6px 20px;
-    position: relative;
-  }
+.button {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  border: 1px solid #ffffff;
+  border-radius: 60px;
+  padding: 6px 20px;
+  position: relative;
+}
 
-  .button:hover {
-    border-color: #D9B6FF;
-    color: #D9B6FF;
-    cursor: pointer;
-  }
+.button:hover {
+  border-color: #d9b6ff;
+  color: #d9b6ff;
+  cursor: pointer;
+}
 
-  .button:active {
-    border-color: #AD61FF;
-    color: #AD61FF;
-    cursor: pointer;
-  }
+.button:active {
+  border-color: #ad61ff;
+  color: #ad61ff;
+  cursor: pointer;
+}
 
-  .button:not(:last-child) {
-    margin-right: 10px;
-  }
+.button:not(:last-child) {
+  margin-right: 10px;
+}
 
-  .list {
-    width: 248px;
-    background: #313131;
-    border-radius: 12px;
-    padding: 36px 34px;
-  }
+.list {
+  width: 248px;
+  background: #313131;
+  border-radius: 12px;
+  padding: 36px 34px;
+}
 
-  .genre {
-    top: 48px;
-    position: absolute;
-    left: 0;
-  }
+.genre {
+  top: 48px;
+  position: absolute;
+  left: 0;
+}
 
-  .performers {
-    top: 48px;
-    position: absolute;
-    left: 0;
-  }
+.performers {
+  top: 48px;
+  position: absolute;
+  left: 0;
+}
 
-  .year {
-    top: 48px;
-    position: absolute;
-    left: 0;
-    width: 403px;
-    padding: 34px;
-  }
+.year {
+  top: 48px;
+  position: absolute;
+  left: 0;
+  width: 403px;
+  padding: 34px;
+}
 
-  .active {
-    border-color: #AD61FF;
-    color: #AD61FF;
-    cursor: pointer;
-  }
+.active {
+  border-color: #ad61ff;
+  color: #ad61ff;
+  cursor: pointer;
+}
 
-  .active:hover {
-    border-color: #AD61FF;
-    color: #AD61FF;
-    cursor: pointer;
-  }
+.active:hover {
+  border-color: #ad61ff;
+  color: #ad61ff;
+  cursor: pointer;
+}
