--- a/src/components/filterItem/FilterItem.module.css
+++ b/src/components/filterItem/FilterItem.module.css
@@ -1,12 +1,12 @@
 .item {
-    font-weight: 400;
-    font-size: 20px;
-    line-height: 24px;
-    color: #FFFFFF;
-    cursor: pointer;
-  }
+  font-weight: 400;
+  font-size: 20px;
+  line-height: 24px;
+  color: #ffffff;
+  cursor: pointer;
+}
 
-  .active {
-    text-decoration-line: underline;
-    color: #B672FF;
-  }
+.active {
+  text-decoration-line: underline;
+  color: #b672ff;
+}
