--- a/src/components/loginAndRegistration/LoginAndRegistration.module.css
+++ b/src/components/loginAndRegistration/LoginAndRegistration.module.css
@@ -20,7 +20,7 @@
   line-height: 24px;
   letter-spacing: -0.003em;
   border: none;
-  border-bottom: 1px solid #D0CECE;
+  border-bottom: 1px solid #d0cece;
   padding: 8px 0;
 }
 
