--- a/src/components/filterItem/FilterItem.module.css
+++ b/src/components/filterItem/FilterItem.module.css
@@ -2,7 +2,7 @@
   font-weight: 400;
   font-size: 20px;
   line-height: 24px;
-  color: #ffffff;
+  color: var(--text-primary);
   cursor: pointer;
 }
 
