--- a/src/components/bar/Bar.module.css
+++ b/src/components/bar/Bar.module.css
@@ -3,7 +3,7 @@
   bottom: 0;
   left: 0;
   width: 100%;
-  background: rgba(28, 28, 28, 0.5);
+  background: var(--background-bar);
 }
 
 .content {
@@ -14,12 +14,6 @@
   -webkit-box-direction: normal;
   -ms-flex-direction: column;
   flex-direction: column;
-}
-
-.progress {
-  width: 100%;
-  height: 5px;
-  background: #2e2e2e;
 }
 
 .block {
@@ -60,9 +54,4 @@
   -webkit-box-direction: normal;
   -ms-flex-direction: row;
   flex-direction: row;
-}
-
-.color {
-  background-color: red;
-  height: 5px;
 }
