--- a/src/components/filter/Filter.module.css
+++ b/src/components/filter/Filter.module.css
@@ -25,21 +25,15 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
-  border: 1px solid #ffffff;
+  border: 1px solid var(--text-primary);
   border-radius: 60px;
   padding: 6px 20px;
   position: relative;
 }
 
 .button:hover {
-  border-color: #d9b6ff;
-  color: #d9b6ff;
-  cursor: pointer;
-}
-
-.button:active {
-  border-color: #ad61ff;
-  color: #ad61ff;
+  border-color: var(--hover-primary);
+  color: var(--hover-primary);
   cursor: pointer;
 }
 
@@ -49,7 +43,7 @@
 
 .list {
   width: 248px;
-  background: #313131;
+  background: var(--background-secondary);
   border-radius: 12px;
   padding: 36px 34px;
 }
@@ -75,13 +69,13 @@
 }
 
 .active {
-  border-color: #ad61ff;
-  color: #ad61ff;
+  border-color: var(--active-primary);
+  color: var(--active-primary);
   cursor: pointer;
 }
 
 .active:hover {
-  border-color: #ad61ff;
-  color: #ad61ff;
+  border-color: var(--active-primary);
+  color: var(--active-primary);
   cursor: pointer;
 }
