--- a/src/components/filterItemRadio/FilterItemRadio.module.css
+++ b/src/components/filterItemRadio/FilterItemRadio.module.css
@@ -2,7 +2,7 @@
     font-weight: 400;
     font-size: 20px;
     line-height: 24px;
-    color: #FFFFFF;
+    color: var(--text-primary);
     cursor: pointer;
     display: flex;
     align-items: center;
