--- a/src/components/navigation/Navigation.module.css
+++ b/src/components/navigation/Navigation.module.css
@@ -1,6 +1,6 @@
 .nav {
   width: 244px;
-  background-color: #181818;
+  background-color: var(--background-secondary);
   padding: 20px 0 20px 36px;
 }
 
