--- a/src/components/navigationMenu/NavigationMenu.module.css
+++ b/src/components/navigationMenu/NavigationMenu.module.css
@@ -13,8 +13,12 @@
 }
 
 .link {
-  color: #ffffff;
+  color: var(--text-primary);
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
+}
+
+.changeTheme {
+  cursor: pointer;
 }
