--- a/src/components/personal/Personal.module.css
+++ b/src/components/personal/Personal.module.css
@@ -20,13 +20,15 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
-  color: #ffffff;
   margin-right: 16px;
 }
 
 .avatar {
+  cursor: pointer;
+}
+
+.svg {
   width: 43px;
   height: 43px;
-  background-color: #313131;
-  border-radius: 50%;
+  stroke: var(--text-primary);
 }
