--- a/src/components/skeletons/skeletonSideBar/SkeletonSideBar.module.css
+++ b/src/components/skeletons/skeletonSideBar/SkeletonSideBar.module.css
@@ -35,5 +35,5 @@
   width: 250px;
   height: 150px;
   margin-bottom: 30px;
-  background-color: #313131;
+  background-color: var(--background-tertiary);
 }
