--- a/src/components/skeletons/skeletonTrackList/SkeletonTrackList.module.css
+++ b/src/components/skeletons/skeletonTrackList/SkeletonTrackList.module.css
@@ -38,7 +38,7 @@
   width: 51px;
   height: 51px;
   padding: 16px;
-  background: #313131;
+  background: var(--background-tertiary);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -54,17 +54,17 @@
 .title__skeleton {
   width: 356px;
   height: 19px;
-  background-color: #313131;
+  background-color: var(--background-tertiary);
 }
 
 .author__skeleton {
   width: 271px;
   height: 19px;
-  background-color: #313131;
+  background-color: var(--background-tertiary);
 }
 
 .album__skeleton {
   width: 305px;
   height: 19px;
-  background-color: #313131;
+  background-color: var(--background-tertiary);
 }
