--- a/src/components/trackList/TrackList.module.css
+++ b/src/components/trackList/TrackList.module.css
@@ -31,7 +31,7 @@
   font-size: 14px;
   line-height: 24px;
   letter-spacing: 2px;
-  color: #696969;
+  color: var(--text-secondary);
   text-transform: uppercase;
   width: 447px;
 }
@@ -42,7 +42,7 @@
   font-size: 14px;
   line-height: 24px;
   letter-spacing: 2px;
-  color: #696969;
+  color: var(--text-secondary);
   text-transform: uppercase;
   width: 321px;
 }
@@ -53,7 +53,7 @@
   font-size: 14px;
   line-height: 24px;
   letter-spacing: 2px;
-  color: #696969;
+  color: var(--text-secondary);
   text-transform: uppercase;
   width: 245px;
 }
@@ -74,7 +74,7 @@
   width: 12px;
   height: 12px;
   fill: transparent;
-  stroke: #696969;
+  stroke: var(--text-secondary);
 }
 
 .playlist {
