--- a/src/components/trackPlayerContain/TrackPlayerContain.module.css
+++ b/src/components/trackPlayerContain/TrackPlayerContain.module.css
@@ -13,7 +13,7 @@
 .image {
   width: 51px;
   height: 51px;
-  background-color: #313131;
+  background-color: var(--background-tertiary);
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -49,7 +49,7 @@
   font-weight: 400;
   font-size: 16px;
   line-height: 24px;
-  color: #ffffff;
+  color: var(--theme-page-text-primary);
   white-space: nowrap;
 }
 
@@ -65,5 +65,5 @@
   font-weight: 400;
   font-size: 13px;
   line-height: 24px;
-  color: #ffffff;
+  color: var(--theme-page-text-primary);
 }
