--- a/src/pages/trackList/MainTrackList.module.css
+++ b/src/pages/trackList/MainTrackList.module.css
@@ -1,7 +1,7 @@
 .container {
   max-width: 1920px;
   margin: 0 auto;
-  background-color: #181818;
+  /* background-color: #181818; */
   height: 100vh;
   overflow: auto;
 }
