--- a/src/style/App.css
+++ b/src/style/App.css
@@ -41,11 +41,15 @@ body {
   width: 100%;
   height: 100%;
   font-family: 'StratosSkyeng', sans-serif;
-  color: #ffffff;
 }
 
 .wrapper {
   width: 100%;
   min-height: 100%;
   overflow: hidden;
+  color: var(--text-primary);
+  background-color: var(--background-primary);
 }
+
+
+
