--- a/src/components/bar/Bar.module.css
+++ b/src/components/bar/Bar.module.css
@@ -55,3 +55,21 @@
   -ms-flex-direction: row;
   flex-direction: row;
 }
+
+.progress {
+  width: 100%;
+  height: 5px;
+  background: var(--background-progress);
+  cursor: pointer;
+}
+
+.progressLine {
+	height: 5px;
+	-webkit-appearance: none;
+	width: 100%;
+	margin-bottom: 10px;
+	border-radius: 8px;
+	background: #3b7677;
+	transition: background 0.2s ease;
+	cursor: pointer;
+}
