--- a/src/components/track/Track.module.css
+++ b/src/components/track/Track.module.css
@@ -113,6 +113,12 @@
   stroke: var(--text-secondary);
 }
 
+.time__svg_active {
+  fill: var(--active-tertiary);
+  stroke: var(--active-stroke);
+  cursor: pointer;
+}
+
 .time__text {
   font-style: normal;
   font-weight: 400;
