--- a/src/pages/registration/RegistrationScreen.module.css
+++ b/src/pages/registration/RegistrationScreen.module.css
@@ -31,6 +31,7 @@
   border: none;
   border-bottom: 1px solid #d0cece;
   padding: 8px 0;
+  outline: none;
 }
 
 .input::placeholder {
@@ -61,6 +62,12 @@
 
 .error {
   color: red;
+  margin-top: -30px;
+  font-size: 12px;
+}
+
+.tip {
+  color: rgb(171, 226, 89);
   margin-top: -30px;
   font-size: 12px;
 }
